--- a/web/templates/pages/my_stuff_story_tasks.html
+++ b/web/templates/pages/my_stuff_story_tasks.html
@@ -1,10 +1,8 @@
 {% extends 'skeleton.html' %}{% block title %}TicketTracker - My Stuff{% endblock title %}
+{% block page_header %}
+	<h2>My Stuff - Story: {{ selected_story.title }} Tasks</h2>
+{% endblock %}
 {% block main %}
-<div class="row-fluid">
-	<div class="span12" style="margin-bottom:9px;">
-		<h2><a href="{% url web.my_stuff %}">My Stuff</a> / Story: {{ selected_story.title }} Tasks</h2>
-	</div>
-</div>
 <div class="row-fluid">
 	<div class="span5" style="margin-bottom:1em;">
 		<div class="well tt-side-wrap" id="tt-my-stuff">
